2008-03-11  Andrés G. Aragoneses <knocte@gmail.com>

	* worker/bloggers.xml: Corrected the accent (HTMLish).

2008-03-11  Andrés G. Aragoneses <knocte@gmail.com>

	* worker/bloggers.xml: Added my feed URL (without head yet).

2008-02-25  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* worker/bloggers.xml: Added my RSS feed address.
	* www/images/heads/sandy.png: Added my head.

2008-02-07  Calvin Gaisford  <cgaisford@novell.com>

	* www/images/heads/calvin.png: Updated head.

2008-02-06  Michael Dominic K.  <mdk@mdk.am> 

	* worker/bloggers.xml: Updating my RSS feed address.

2008-01-25  Calvin Gaisford  <cgaisford@novell.com>

	* worker/bloggers.xml: Added head tag.

2008-01-24  Calvin Gaisford  <cgaisford@novell.com>

	* worker/bloggers.xml: Added my blog URL.
	* www/images/heads/calvin.png: Added head.

2007-11-13  Veerapuram Varadhan  <vvaradhan@novell.com>

	* worker/bloggers.xml: Modified my blog URL.
	
2007-11-11  Zac Bowling  <zac@zacbowling.com>

        * workers/bloggers.xml: Fix my blog link.

2007-11-04  Ivan N. Zlatev  <contact@i-nz.net>

	* workers/bloggers.xml: Fix my blog link.

2007-10-31  Alp Toker  <alp@atoker.com>

	* worker/bloggers.xml: Give Monologue a simplified RSS feed to work around
	the RSS.NET WordPress incompatibility.

2007-10-27  Jonathan Chambers  <joncham@gmail.com>

	* worker/bloggers.xml: Try that again.

2007-10-16  Jonathan Chambers  <joncham@gmail.com>

	* worker/bloggers.xml: Fix my blog link.

2007-10-14  Marcos Cobena <marcoscobena@gmail.com>

	* worker/bloggers.xml: Modified my Blog URL.

2007-09-24  Veerapuram Varadhan  <vvaradhan@novell.com>

	* worker/bloggers.xml: Add my blog.
	
2007-09-17  Geoff Norton  <gnorton@customerdna.com>

	* worker/bloggers.xml: Update kangaroo's entry.

2007-08-25  Zac Bowling <zac@zacbowling.com>
	
	* worker/default.tpl: fix anon svn link to monologue source

2007-06-12  Alp Toker  <alp.toker@collabora.co.uk>

	* worker/bloggers.xml: Add Alp.
