@@ -150,5 +150,9 @@
 	<Blogger Name="Rusty Howell" RssUrl="http://rustyhowell.blogspot.com/feeds/posts/default/-/mono?alt=rss" IrcNick="rusty"/>
 	<Blogger Name="Calvin Gaisford" RssUrl="http://calvinrg.blogspot.com/feeds/posts/default/-/mono?alt=rss" IrcNick="calvin" Head="calvin.png"/>
 	<Blogger Name="Sandy Armstrong" RssUrl="http://automorphic.blogspot.com/feeds/posts/default?alt=rss" IrcNick="sandy" Head="sandy.png"/>
-	<Blogger Name="Andres G. Aragoneses" RssUrl="http://knocte.blogspot.com/feeds/posts/default?alt=rss" IrcNick="knocte" />
+  <Blogger Name    = "Andres G. Aragoneses"
+           RssUrl  = "http://knocte.blogspot.com/feeds/posts/default?alt=rss"
+           IrcNick = "knocte"
+           Head    = "http://www.mono-project.com/files/5/54/Knocte.png"
+           />
 </BloggerCollection>
